# django-base-template

./: .dockerignore  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Dockerfile-local  Makefile  README.md  docker-compose.yml  pyproject.toml
.envs/example/: mailhog.env  postgres.env
compose/: service.app.yml  service.postgres.yml
docker/: entrypoint  local.dockerfile  setup  start
environments/local/: .env-postgresql  .env-postgresql.example
environments/local/admin/: .env-django  .env-django.example
scripts/: python-setup  setup  update
src/: Makefile  asgi.py  manage.py  wsgi.py
src/apps/commons/: models.py
src/apps/iam/users/: apps.py
src/apps/iam/users/admin/: __init__.py  users.py
src/apps/iam/users/api/v1/: urls.py
src/apps/iam/users/api/v1/serializers/: __init__.py  users.py
src/apps/iam/users/api/v1/views/: login.py  users.py
src/apps/iam/users/management/commands/: staff.py  superuser.py
src/apps/iam/users/migrations/: 0001_initial.py
src/apps/iam/users/models/: __init__.py  managers.py  models.py
src/apps/users/: apps.py
src/apps/users/api/v1/serializers/: users.py
src/apps/users/api/v1/views/: login.py  users.py
src/apps/users/management/commands/: staff.py  superuser.py
src/apps/users/migrations/: 0001_initial.py
src/apps/users/models/: managers.py  models.py  users.py
src/commons/: models.py
src/fixtures/: users.json
src/settings/: apps.py  base.py  database.py  django.py  mail.py  structlog.py
src/settings/admin/: admin_interface.py  base.py  dev.py  env_dev.py  env_local.py  local.py
src/settings/api/: base.py  dev.py  env_dev.py  env_local.py  local.py  rest_framework.py
src/settings/common/: apps.py  base.py  database.py  django.py  mail.py  structlog.py
src/urls/: admin.py  api.py  common.py
