[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-configurations = "^2.4.1"
python-dotenv = "^1.0.0"
django-anymail = "^10.1"
djangorestframework = "^3.14.0"
django-model-utils = "^4.3.1"
django-cors-headers = "^4.2.0"
drf-spectacular = "^0.26.4"
django-structlog = "^5.3.0"
psycopg = {extras = ["binary"], version = "^3.1.10"}
pydantic = "^2.1.1"
update = "^0.0.1"
django-allauth = "^0.54.0"
django-rest-knox = "^4.2.0"
django-admin-interface = "^0.26.0"
whitenoise = "^6.5.0"


[tool.poetry.group.dev.dependencies]
pylint-django = "^2.5.3"
pytest = "^7.4.0"
django-debug-toolbar = "^4.1.0"
django-extensions = "^3.2.3"
werkzeug = "^2.3.6"
pytest-django = "^4.5.2"
pre-commit = "^3.3.3"
django-watchman = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ["py38", "py39"]
include = "\\.pyi?$"
exclude = """
/(\\.git/
  |\\.eggs
  |\\.hg
  |__pycache__
  |\\.cache
  |\\.ipynb_checkpoints
  |\\.mypy_cache
  |\\.pytest_cache
  |\\.tox
  |\\.local-deploy
  |venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |backups
)/
"""

[tool.isort]
profile = "black"
known_first_party = "src"
default_section = "THIRDPARTY"
import_heading_firstparty = "Django Base Template"
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party Stuff"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/venv/**"]
