[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-configurations = "^2.4.1"
python-dotenv = "^1.0.0"
django-anymail = "^10.1"
djangorestframework = "^3.14.0"
django-model-utils = "^4.3.1"
django-cors-headers = "^4.2.0"
drf-spectacular = "^0.26.4"
django-structlog = "^5.3.0"
psycopg = {extras = ["binary"], version = "^3.1.10"}
pydantic = "^2.2.1"
update = "^0.0.1"
django-allauth = "^0.54.0"
django-rest-knox = "^4.2.0"
django-admin-interface = "^0.26.0"
whitenoise = "^6.5.0"


[tool.poetry.group.dev.dependencies]
pylint-django = "^2.5.3"
pytest = "^7.4.0"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
werkzeug = "^2.3.7"
pytest-django = "^4.5.2"
pre-commit = "^3.3.3"
django-watchman = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
src = ["src"]
target-version = "py310"
select = ["ALL"]
ignore = [
    "D",        # Remove all docstring error
    "ANN",      # Type hints related, let mypy/pyright handle these.
    "COM812",   # "Trailing comma missing". If black is happy, I'm happy.
    "D104",     # Missing docstring in public package
    "D100",     # Missing docstring in public module
    "E501",     # "Line too long". If black is happy, I'm happy.
    "EM101",    # "Exception must not use a string literal, assign to variable first"
    "EM102",    # "Exception must not use an f-string literal, assign to variable first"
    "SIM108",   # "Use ternary operator ...". Ternary is harmful for readability in some cases.
    "TRY003",   # "Avoid specifying long messages outside the exception class"
    "PGH004",   # Use specific rule codes when using `noqa`
    "A003",     # Class attribute `id` is shadowing a Python builtin
    "A002",     # Argument `format` is shadowing a Python builtin
]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.pydocstyle]
convention = "numpy"
